--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -13,10 +13,11 @@ sections:
       - When T.E. Shaw co-founded Aux in 2013, he was based in Germany with one of the co-founders in Canada and the other in Bulgaria.
       - In addition to that Aux has never had defined C-level roles. The three co-founders take decisions unnanimously and share the workload as needed.
       - When Charie Cox and Aux co-founded Digytle in London in 2020 they followed the same distributed route, building on Aux' successful and harmoneous model, adding a lovely British flavour.
-      - For this reason when T.E. Shaw saw Distributed Leadership and Digital Innovation, he "Bang! That's what we have been doing for years!". And he made it his mission to meet Caterina Maniscalco, whic he eventually did in the early 2020.
+      - For this reason when T.E. Shaw saw Distributed Leadership and Digital Innovation, he "Bang! That's what we have been doing for years!". And he made it his mission to meet Caterina Maniscalco, which he eventually did in the early 2020.
+      - Caterina and T.E. hit it off and decided that their deep understanding of their share values, both in practical and highly descriptive way, are a nice base for a long and productive cooperation. So Caterina joined Digytle and Digytle adopted Caterina's book.
   - section:
     title:
-      title: Solid Science
+      title: A Seminal Work
       colour: "#EF233C"
     text:
       - Caterina Maniscalco's book is rich in scientific research.
